[gd_scene load_steps=38 format=2]

[ext_resource path="res://sprites/tilesets.png" type="Texture" id=1]
[ext_resource path="res://entities/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/plains.gd" type="Script" id=3]
[ext_resource path="res://sprites/skill_01_icon.png" type="Texture" id=4]
[ext_resource path="res://fonts/FutilePro.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://fonts/futile_font.tres" type="DynamicFont" id=6]
[ext_resource path="res://entities/slime_green.tscn" type="PackedScene" id=7]
[ext_resource path="res://entities/slime_red.tscn" type="PackedScene" id=8]
[ext_resource path="res://entities/treasure_end.tscn" type="PackedScene" id=9]
[ext_resource path="res://sprites/bg_01.png" type="Texture" id=10]
[ext_resource path="res://sprites/bg_02.png" type="Texture" id=12]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 4, 16, 4, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 16, 16, 0, 16, 0, 4, 16, 4 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 16, 16, 0, 16, 0, 4, 16, 4 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 16, 16, 0, 16, 0, 4, 16, 4 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 16, 16, 0, 16, 0, 4, 16, 4 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 4, 16, 4, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 16, 16, 0, 16, 0, 4, 16, 4 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 16, 16, 0, 16, 0, 4, 16, 4 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 16, 16, 0, 16, 0, 4, 16, 4 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 16, 16, 0, 16, 0, 4, 16, 4 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 16, 16, 0, 16, 0, 4, 16, 4 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 16, 16, 0, 16, 0, 4, 16, 4 )

[sub_resource type="TileSet" id=13]
0/name = "tilesets.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "tilesets.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 16, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "tilesets.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 32, 0, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 5 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "tilesets.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 16, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 6 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "tilesets.png 4"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 16, 16, 16, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 7 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "tilesets.png 5"
5/texture = ExtResource( 1 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 32, 16, 16, 16 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 8 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "tilesets.png 6"
6/texture = ExtResource( 1 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 32, 16, 16 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 9 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "tilesets.png 7"
7/texture = ExtResource( 1 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 16, 32, 16, 16 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape = SubResource( 10 )
7/shape_one_way = false
7/shape_one_way_margin = 1.0
7/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
7/z_index = 0
8/name = "tilesets.png 8"
8/texture = ExtResource( 1 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 32, 32, 16, 16 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape = SubResource( 11 )
8/shape_one_way = false
8/shape_one_way_margin = 1.0
8/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
8/z_index = 0
9/name = "tilesets.png 9"
9/texture = ExtResource( 1 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 0, 48, 16, 16 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape = SubResource( 12 )
9/shape_one_way = false
9/shape_one_way_margin = 1.0
9/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
9/z_index = 0
10/name = "tilesets.png 10"
10/texture = ExtResource( 1 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 16, 48, 16, 16 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape = SubResource( 3 )
10/shape_one_way = false
10/shape_one_way_margin = 1.0
10/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
10/z_index = 0
11/name = "tilesets.png 11"
11/texture = ExtResource( 1 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 32, 48, 16, 16 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape = SubResource( 4 )
11/shape_one_way = false
11/shape_one_way_margin = 1.0
11/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
11/z_index = 0

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0, 0, 0, 0.588235 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.584314, 0.584314, 0.584314, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.101961, 0.109804, 0.172549, 1 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.309804, 0.309804, 0.309804, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.101961, 0.109804, 0.172549, 1 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.101961, 0.109804, 0.172549, 1 )

[sub_resource type="InputEventAction" id=18]
action = "shortcut"
pressed = true

[sub_resource type="ShortCut" id=19]
shortcut = SubResource( 18 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0, 0, 0, 0.588235 )

[sub_resource type="DynamicFont" id=21]
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.584314, 0.584314, 0.584314, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.101961, 0.109804, 0.172549, 1 )

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 0.309804, 0.309804, 0.309804, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.101961, 0.109804, 0.172549, 1 )

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.101961, 0.109804, 0.172549, 1 )

[sub_resource type="InputEventAction" id=25]
action = "shortcut"
pressed = true

[sub_resource type="ShortCut" id=26]
shortcut = SubResource( 25 )

[node name="plains_01" type="Node2D"]
script = ExtResource( 3 )

[node name="parallax_background" type="ParallaxBackground" parent="."]

[node name="parallax_layer" type="ParallaxLayer" parent="parallax_background"]
motion_scale = Vector2( 0.1, 1 )
motion_mirroring = Vector2( 320, 0 )

[node name="sprite" type="Sprite" parent="parallax_background/parallax_layer"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 12 )
centered = false

[node name="parallax_layer2" type="ParallaxLayer" parent="parallax_background"]
motion_scale = Vector2( 0.3, 1 )
motion_mirroring = Vector2( 320, 0 )

[node name="sprite" type="Sprite" parent="parallax_background/parallax_layer2"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 10 )
centered = false

[node name="tile_map" type="TileMap" parent="."]
z_index = -2
tile_set = SubResource( 13 )
cell_size = Vector2( 16, 16 )
collision_layer = 4
collision_mask = 0
format = 1
tile_data = PoolIntArray( 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 589847, 0, 0, 589848, 0, 0, 589849, 0, 0, 589850, 0, 0, 589851, 0, 0, 589852, 0, 0, 589853, 0, 0, 589854, 0, 0, 589855, 0, 0, 589856, 0, 0, 589857, 0, 0, 589858, 0, 0, 589859, 0, 0, 589860, 0, 0, 589861, 0, 0, 589862, 0, 0, 589863, 0, 0, 589864, 0, 0, 589865, 0, 0, 589866, 0, 0, 589867, 0, 0, 589868, 0, 0, 589869, 0, 0, 589870, 0, 0, 589871, 0, 0, 589872, 0, 0, 589873, 0, 0, 589874, 0, 0, 589875, 0, 0, 589876, 0, 0, 589877, 0, 0, 589878, 0, 0, 589879, 0, 0, 589880, 0, 0, 589881, 0, 0, 589882, 0, 0, 589883, 0, 0, 589884, 0, 0, 589885, 0, 0, 589886, 0, 0, 589887, 0, 0, 589888, 0, 0, 589889, 0, 0, 589890, 0, 0, 589891, 0, 0, 589892, 0, 0, 589893, 0, 0, 589894, 0, 0, 589895, 0, 0, 589896, 0, 0, 589897, 0, 0, 589898, 0, 0, 589899, 0, 0, 589900, 0, 0, 589901, 0, 0, 589902, 0, 0, 589903, 0, 0, 589904, 0, 0, 589905, 0, 0, 589906, 0, 0, 589907, 0, 0, 589908, 0, 0, 589909, 0, 0, 589910, 0, 0, 589911, 0, 0, 589912, 0, 0, 589913, 0, 0, 589914, 0, 0 )

[node name="characters" type="Node2D" parent="."]

[node name="player" parent="characters" instance=ExtResource( 2 )]
position = Vector2( 65, 140 )

[node name="enemies" type="Node2D" parent="."]

[node name="slime_green" parent="enemies" instance=ExtResource( 7 )]
position = Vector2( 289, 140 )

[node name="slime_green2" parent="enemies" instance=ExtResource( 7 )]
position = Vector2( 409, 140 )

[node name="slime_green3" parent="enemies" instance=ExtResource( 7 )]
position = Vector2( 434, 140 )

[node name="slime_green4" parent="enemies" instance=ExtResource( 7 )]
position = Vector2( 585, 140 )

[node name="slime_green6" parent="enemies" instance=ExtResource( 7 )]
position = Vector2( 614, 140 )

[node name="slime_green5" parent="enemies" instance=ExtResource( 7 )]
position = Vector2( 825, 140 )

[node name="slime_red" parent="enemies" instance=ExtResource( 8 )]
position = Vector2( 1001, 140 )

[node name="projectiles" type="Node2D" parent="."]

[node name="objects" type="Node2D" parent="."]

[node name="treasure_end" parent="objects" instance=ExtResource( 9 )]
position = Vector2( 1158, 140 )

[node name="timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="gui" type="CanvasLayer" parent="."]

[node name="skill_tutorial" type="Panel" parent="gui"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="skill_icon" type="TextureRect" parent="gui/skill_tutorial"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
rect_scale = Vector2( 5, 5 )
rect_pivot_offset = Vector2( 8, 16 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="gui/skill_tutorial"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -24.0
margin_right = 130.0
margin_bottom = 24.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 130, 72 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.705882 )
text = "Skill Unlocked: Cure
Effect: Heal the Hero for 20 HP
Mana Cost: 20 Mana"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="skill_btn" type="Button" parent="gui/skill_tutorial"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -28.0
margin_top = -12.0
margin_right = 28.0
margin_bottom = 12.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 28, 120 )
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/normal = SubResource( 17 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.101961, 0.109804, 0.172549, 1 )
custom_colors/font_color_hover = Color( 0.101961, 0.109804, 0.172549, 1 )
custom_colors/font_color_pressed = Color( 0.101961, 0.109804, 0.172549, 1 )
shortcut_in_tooltip = false
shortcut = SubResource( 19 )
text = "OK!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hint_lbl" type="Label" parent="gui/skill_tutorial/skill_btn"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = 18.0
margin_right = 100.0
margin_bottom = 32.0
rect_scale = Vector2( 0.6, 0.6 )
rect_pivot_offset = Vector2( 100, 7 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.545098, 0.545098, 0.545098, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.392157 )
text = "or click space to continue"

[node name="automatic_move_tutorial" type="Panel" parent="gui"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="gui/automatic_move_tutorial"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -189.0
margin_top = -26.0
margin_right = 191.0
margin_bottom = 26.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 190, 26 )
custom_fonts/font = SubResource( 21 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.705882 )
text = "The Hero and You (The Support) automatically moves to the right during an adventure"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_btn" type="Button" parent="gui/automatic_move_tutorial"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -28.0
margin_top = -12.0
margin_right = 28.0
margin_bottom = 12.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 28, 120 )
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/normal = SubResource( 24 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.101961, 0.109804, 0.172549, 1 )
custom_colors/font_color_hover = Color( 0.101961, 0.109804, 0.172549, 1 )
custom_colors/font_color_pressed = Color( 0.101961, 0.109804, 0.172549, 1 )
shortcut_in_tooltip = false
shortcut = SubResource( 26 )
text = "OK!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hint_lbl" type="Label" parent="gui/automatic_move_tutorial/move_btn"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = 18.0
margin_right = 100.0
margin_bottom = 32.0
rect_scale = Vector2( 0.6, 0.6 )
rect_pivot_offset = Vector2( 100, 7 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.545098, 0.545098, 0.545098, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.392157 )
text = "or click space to continue"

[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="gui/skill_tutorial/skill_btn" to="." method="_on_skill_btn_pressed"]
[connection signal="pressed" from="gui/automatic_move_tutorial/move_btn" to="." method="_on_move_btn_pressed"]
